--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "d3": "^7.8.4",
         "d3-svg-legend": "^2.25.6",
+        "moment": "^2.29.4",
         "tslib": "^2.5.2",
         "vue": "^3.3.4",
         "vuex": "^4.1.0"
