--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite-plugin-typescript": "^1.0.4"
     },
     "dependencies": {
+        "bootstrap": "^5.3.2",
         "d3": "^7.8.4",
         "d3-svg-legend": "^2.25.6",
         "moment": "^2.29.4",
